--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Debug SSH Key
+        run: |
+          file ~/.ssh/id_rsa
+          cat ~/.ssh/id_rsa | base64
+      - name: Debug SSH Key
+        run: echo "${{ secrets.SSH_DEPLOY_KEY }}" | base64
       - name: Set up SSH key
         run: |
           mkdir -p ~/.ssh
