--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,18 +12,18 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Debug SSH Key
-        run: |
-          file ~/.ssh/id_rsa
-          cat ~/.ssh/id_rsa | base64
-      - name: Debug SSH Key
-        run: echo "${{ secrets.SSH_DEPLOY_KEY }}" | base64
       - name: Set up SSH key
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_DEPLOY_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
+      - name: Debug1 SSH Key
+        run: |
+          file ~/.ssh/id_rsa
+          cat ~/.ssh/id_rsa | base64
+      - name: Debug2 SSH Key
+        run: echo "${{ secrets.SSH_DEPLOY_KEY }}" | base64
       - name: Deploy to server
         run: |
           echo "Starting deployment..."
