--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Deploy to server
         run: |
           echo "Starting deployment..."
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no username@host "cd /home/designcise && git pull origin main && <your-other-commands>"
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no root@147.45.43.248 "cd /root/test/ && git pull origin main"
           echo "Deployment completed."
