--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         host: 147.45.43.248 # Хост (сервер) для подключения, берется из секретов Github
         username: root # Имя пользователя для SSH, берется из секретов Github
-        key: ${{ secrets.PRIVATE_KEY }} # Приватный ключ для SSH, берется из секретов Github
+        key: ${{ secrets.SSH_DEPLOY_KEY }} # Приватный ключ для SSH, берется из секретов Github
         port: 22
         script: |
          cd /root/test/
